--- a/components/product-tile/product-tile.module.css
+++ b/components/product-tile/product-tile.module.css
@@ -1,13 +1,19 @@
 .product {
   display: flex;
   max-width: 100%;
+  height: 25rem;
+  /* overflow: hidden; */
   flex-direction: column;
   text-align: center;
   gap: 1rem;
   padding: 1rem;
   border-radius: 5px;
-  transition: 0.3s;
   border: 2px solid black;
+}
+
+.product-info {
+  display: flex;
+  flex-direction: column;
 }
 
 .product-name {
@@ -19,9 +25,9 @@
 }
 
 .image {
-  max-width: 100%;
-  object-fit: cover;
-  max-height: 20rem;
+  /* display: flex; */
+  /* justify-content: center; */
+  object-fit: contain;
 }
 
 .test {
